
Bug Fixes
---------------------
(No changes)

Deprecation Removals
----------------------

* SOLR-16535: The 'jaegertracer-configurator' module is removed. Please use 'opentelemetry' (janhoy)

Other Changes
---------------------

* SOLR-15730: SolrJ modules like SolrJ-Zookeeper are now opt-in from a Maven POM perspective.
  Previously, the modules would come transitively.
  (David Smiley)

==================  9.2.0 ==================

New Features
---------------------

* SOLR-16435: Add Request timeout to Http2SolrClient (Tomás Fernández Löbbe)

* SOLR-16500: Added --enable-preview for JDK 19 to enable MemorySegment support in MMapDirectory (Kevin Risden)

* SOLR-16496: QueryElevationComponent now supports fq exclusions (Rudi Seitz via David Smiley)

* SOLR-16409: Admin UI - Expose all highlighting parameters in the Query UI (Jeanie Lam via Eric Pugh)

* SOLR-16532: New OpenTelemetry (OTEL) module with OTLP/gRPC trace exporter. See ref.guide. (janhoy, David Smiley)

* SOLR-16596: Learning To Rank - Added support for null feature values in multiple additive trees models (Anna Ruggero via Alessandro Benedetti)

* SOLR-16608: Ability to compress state.json in Zookeeper (Justin Sweeney via noble)

* SOLR-16646: New function query operator isnan to verify if value is NaN (Gabriel Magno via Kevin Risden)

Improvements
---------------------

* SOLR-16428: IgnoreLargeDocumentProcessorFactory now supports a "permissive" mode, where it logs and skips
  offending documents but doesn't short-circuit the entire batch or return a 4xx error.  This mode can be enabled
  by setting the `permissiveMode` boolean option to `true` in your solrconfig.xml's
  IgnoreLargeDocumentProcessorFactory declaration. (Jason Gerlowski)

* SOLR-16392: A number of v2 "replica" endpoints have been updated to be more REST-ful, and hopefully, intuitive.
  ADDREPLICAPROP is now `PUT /api/collections/$coll/shards/$shard/replicas/$rep/properties/$prop {"value": $val}`