@@ -15,9 +15,10 @@ out/
 /dev-tools/missing-doclet/out/
 
 # Eclipse
-/.project
-/.classpath
-/.settings/
+**/.project
+**/.classpath
+**/.settings/
+/.metadata
 #    Eclipse Gradle oddity
 **/bin/default/
 
