@@ -31,6 +31,8 @@ configure(rootProject) {
     }
 
     classpath {
+      downloadSources = true
+      downloadJavadoc = true
       defaultOutputDir = file('build/eclipse')
 
       file {
